# alexbox

./: .env  .gitignore  .travis.yml  AUTHORS  Cargo.toml  Makefile  build.rs  config.json  config.xml  planner.db  readme.md
ci/: before_deploy.sh
migrations/2020-02-26-223319_create_tiles/: down.sql  up.sql
migrations/2020-10-20-010254_cleanup-mpv-tiles/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/api/: config.rs  mod.rs  playnow.rs  service.rs  tile.rs
src/clientapp/: package.json
src/clientapp/public/: index.html  manifest.json
src/clientapp/src/: App.js
src/clientapp/src/components/: About.js  Base.js  Editor.js  Footer.js  NavMenu.js
src/clientapp/src/style/: base.css
src/dto/: config_dto.rs  mod.rs  service_dto.rs  tile_dto.rs
src/handlers/: config_handler.rs  mod.rs  playnow_handler.rs  service_handler.rs  tile_handler.rs
src/routes/: config_route.rs  mod.rs  playnow_route.rs  service_route.rs  tile_route.rs
