[package]
name = "alexbox"
version = "0.1.0"
authors = ["rootyjr <41842051+Rootyjr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
url = "2.1.1"
serde = {version = "1.0.104", features = ["derive"]}
diesel = {version = "1.4.3", features = ["sqlite"]}
diesel_migrations = {version = "1.4.0"}
dotenv = "0.15.0"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
xml-rs = "0.8.1"

[build-dependencies]
url = "2.1.1"
