[package]
name = "alexbox"
version = "0.1.2"
authors = ["Booglejr <rooty@kwtechllc.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
url = "2.1.1"
serde = {version = "1.0.104", features = ["derive"]}
diesel = {version = "1.4.3", features = ["sqlite"]}
diesel_migrations = {version = "1.4.0"}
dotenv = "0.15.0"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
xml-rs = "0.8.1"
chrono = "0.4"

[build-dependencies]
url = "2.1.1"